--- a/panels/background/preview.css
+++ b/panels/background/preview.css
@@ -2,6 +2,7 @@ frame.desktop-preview {
   min-height: 10px;
   padding: 0 4px;
   background-color: black;
+  border-radius: 0;
 }
 
 frame.desktop-preview image {
@@ -33,7 +34,6 @@ image.slideshow-icon {
 
 button.remove-button {
   border-radius: 9999px;
-  -gtk-outline-radius: 9999px;
   padding: 1px 0px; /* circles instead of ellipses */
   background-origin: padding-box, border-box;
   background-clip: padding-box, border-box;
