--- a/panels/background/cc-background-panel.ui
+++ b/panels/background/cc-background-panel.ui
@@ -2,23 +2,17 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="CcBackgroundPanel" parent="CcPanel">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
 
         <child>
-          <object class="HdyClamp">
+          <object class="AdwClamp">
             <property name="visible">1</property>
             <property name="maximum_size">300</property>
             <property name="tightening_threshold">200</property>
             <child>
               <object class="GtkBox">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="spacing">24</property>
                 <property name="margin-start">12</property>
                 <property name="margin-end">12</property>
@@ -27,8 +21,6 @@
                 <property name="hexpand">True</property>
                 <child>
                   <object class="CcBackgroundPreview" id="desktop_preview">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
                     <property name="valign">center</property>
                   </object>
                 </child>
@@ -39,9 +31,8 @@
 
         <child>
           <object class="CcBackgroundChooser" id="background_chooser">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="expand">True</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
             <signal name="background-chosen" handler="on_chooser_background_chosen_cb" object="CcBackgroundPanel" swapped="yes" />
           </object>
         </child>
@@ -51,7 +42,6 @@
 
   <!-- Header button -->
   <object class="GtkButton" id="add_picture_button">
-    <property name="visible">True</property>
     <property name="label" translatable="yes">Add Picture…</property>
     <signal name="clicked" handler="on_add_picture_button_clicked_cb" object="CcBackgroundPanel" swapped="yes" />
   </object>
