[WIP] color: Port to GTK4
This is very rough still. The calibration code
is entirely untested.

--- a/panels/color/cc-color-calibrate.ui
+++ b/panels/color/cc-color-calibrate.ui
@@ -2,114 +2,65 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkDialog" id="dialog_calibrate">
-    <property name="can_focus">False</property>
-    <property name="border_width">12</property>
+    <property name="margin_top">32</property>
+    <property name="margin_bottom">32</property>
+    <property name="margin_start">12</property>
+    <property name="margin_end">12</property>
     <property name="title" translatable="yes">Display Calibration</property>
-    <property name="hide_titlebar_when_maximized">True</property>
-    <property name="type_hint">dialog</property>
     <property name="deletable">False</property>
     <style>
       <class name="osd"/>
     </style>
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox" id="dialog-vbox4">
-        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child internal-child="action_area">
-          <object class="GtkButtonBox" id="dialog-action_area1">
-            <property name="can_focus">False</property>
-            <property name="layout_style">end</property>
+          <object class="GtkBox" id="dialog-action_area1">
             <child>
               <object class="GtkButton" id="button_cancel">
                 <property name="label" translatable="yes">_Cancel</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
                 <property name="use_underline">True</property>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-                <property name="secondary">True</property>
-              </packing>
             </child>
             <child>
               <object class="GtkButton" id="button_start">
                 <property name="label" translatable="yes" comments="This starts the calibration process">_Start</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
                 <property name="use_underline">True</property>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkButton" id="button_resume">
                 <property name="label" translatable="yes" comments="This resumes the calibration process">_Resume</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
                 <property name="use_underline">True</property>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">2</property>
-              </packing>
             </child>
             <child>
               <object class="GtkButton" id="button_done">
                 <property name="label" translatable="yes" comments="This button returns the user back to the color control panel">_Done</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
                 <property name="use_underline">True</property>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">3</property>
-              </packing>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="pack_type">end</property>
-            <property name="position">0</property>
-          </packing>
         </child>
         <child>
           <object class="GtkBox" id="vbox_status">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
             <property name="orientation">vertical</property>
             <property name="spacing">15</property>
             <child>
               <object class="GtkImage" id="image_status">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="yalign">1</property>
+                <property name="valign">end</property>
                 <property name="pixel_size">192</property>
                 <property name="icon_name">address-book-new</property>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
             </child>
             <child>
               <object class="GtkLabel" id="label_status">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="yalign">0</property>
+                <property name="valign">start</property>
                 <property name="label">Do not disturb the calibration device while in progress</property>
                 <property name="justify">center</property>
                 <property name="wrap">True</property>
@@ -118,30 +69,12 @@
                   <attribute name="foreground" value="#ffffffffffff"/>
                 </attributes>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkProgressBar" id="progressbar_status">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
               </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="padding">25</property>
-                <property name="position">2</property>
-              </packing>
             </child>
           </object>
-          <packing>
-            <property name="expand">True</property>
-            <property name="fill">False</property>
-            <property name="position">1</property>
-          </packing>
         </child>
       </object>
     </child>
